--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -11,18 +11,286 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "TPU"
+    }
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "## Use CPU runtime"
+      ],
       "metadata": {
-        "id": "6427RRkAbysU"
+        "id": "16WhNG98gurS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "6427RRkAbysU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c0d618df-047d-40b5-feb9-935362d343e4"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-09-26 03:21:45--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 1115394 (1.1M) [text/plain]\n",
+            "Saving to: ‘input.txt’\n",
+            "\n",
+            "\rinput.txt             0%[                    ]       0  --.-KB/s               \rinput.txt           100%[===================>]   1.06M  --.-KB/s    in 0.07s   \n",
+            "\n",
+            "2023-09-26 03:21:45 (15.7 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m17.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m22.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m84.5/84.5 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "tensorflow 2.13.0 requires typing-extensions<4.6.0,>=3.6.6, but you have typing-extensions 4.8.0 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m233.5/233.5 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
+      "source": [
+        "# We always start with a dataset to train on. Let's download the tiny shakespeare dataset\n",
+        "!wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+        "\n",
+        "!pip install -q --upgrade pip # To support manylinux2010 wheels.\n",
+        "!pip install -q --upgrade jax jaxlib # CPU-only\n",
+        "!pip install -q --upgrade jaxtyping\n",
+        "!pip install -q --upgrade flax"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List, Dict, Mapping, Tuple\n",
+        "\n",
+        "import jax\n",
+        "import jax.numpy as jnp\n",
+        "import jax.random as jrand\n",
+        "import jaxtyping\n",
+        "import flax.linen as nn\n",
+        "from flax.training import train_state  # Useful dataclass to keep train state\n",
+        "import optax\n",
+        "import tensorflow as tf\n",
+        "import pdb\n",
+        "\n",
+        "def println(*args):\n",
+        "  for arg in args:\n",
+        "    print(arg)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "OZqEXlfmfuwo"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataset pipeline"
+      ],
+      "metadata": {
+        "id": "TeccUW1zg-V-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('input.txt', 'r', encoding='utf-8') as f:\n",
+        "    text = f.read()\n",
+        "\n",
+        "# Create chars vocubulary using all the unique characters in the text.\n",
+        "chars = sorted(list(set(text)))\n",
+        "VOCAB_SIZE = len(chars)\n",
+        "\n",
+        "# Create mapping from characters to integers.\n",
+        "stoi = {ch: i for i, ch in enumerate(chars)}\n",
+        "\n",
+        "# Create reverse mapping from integers to characters.\n",
+        "itos = {i: ch for i, ch in enumerate(chars)}\n",
+        "\n",
+        "# Create encode, decode function.\n",
+        "def encode(s: str, stoi: Mapping[str, int]) -> List[int]:\n",
+        "  return [stoi[c] for c in s]\n",
+        "\n",
+        "def decode(tokens: List[int], itos: Mapping[int, str]) -> str:\n",
+        "  return ''.join([itos[i] for i in tokens])\n",
+        "\n",
+        "println(encode(\"hii there\", stoi), decode(encode(\"hii there\", stoi), itos))\n",
+        "\n",
+        "# Let's now split up the data into train and validation sets.\n",
+        "data = jnp.array(encode(text, stoi), dtype=jnp.int64)\n",
+        "n = int(0.9*len(data))\n",
+        "train_data = data[:n]\n",
+        "val_data = data[n:]\n",
+        "\n",
+        "# Below would result in a minibatch size of 32.\n",
+        "BATCH_SIZE = 4 # how many independent sequences will we process in parallel?\n",
+        "BLOCK_SIZE = 8 # what is the maximum context length for predictions?\n",
+        "\n",
+        "train_dataset = (tf.data.Dataset.from_tensor_slices(train_data)\n",
+        "                .batch(BLOCK_SIZE+1)\n",
+        "                .map(lambda input: (input[:BLOCK_SIZE], input[1:BLOCK_SIZE+1]),\n",
+        "                     num_parallel_calls=tf.data.AUTOTUNE)\n",
+        "                .batch(BATCH_SIZE)\n",
+        "                .repeat()\n",
+        "                .as_numpy_iterator())\n",
+        "val_dataset = (tf.data.Dataset.from_tensor_slices(val_data)\n",
+        "                .batch(BLOCK_SIZE+1)\n",
+        "                .map(lambda input: (input[:BLOCK_SIZE], input[1:BLOCK_SIZE+1]),\n",
+        "                     num_parallel_calls=tf.data.AUTOTUNE)\n",
+        "                .batch(BATCH_SIZE)\n",
+        "                .repeat()\n",
+        "                .as_numpy_iterator())\n",
+        "\n",
+        "def get_batch(training: bool = True):\n",
+        "  if not training:\n",
+        "    val_batch = next(val_dataset)\n",
+        "    return jnp.array(val_batch)\n",
+        "\n",
+        "  train_batch = next(train_dataset)\n",
+        "  return jnp.array(train_batch)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jYycQ8ocg2sy",
+        "outputId": "7ed83bd6-e173-4844-e733-3d90af780a85"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[46, 47, 47, 1, 58, 46, 43, 56, 43]\n",
+            "hii there\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-3-560c18dc3230>:24: UserWarning: Explicitly requested dtype <class 'jax.numpy.int64'> requested in array is not available, and will be truncated to dtype int32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/google/jax#current-gotchas for more.\n",
+            "  data = jnp.array(encode(text, stoi), dtype=jnp.int64)\n",
+            "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xb, yb = get_batch()\n",
+        "println(\"inputs\", xb, \"inputs shape\", xb.shape)\n",
+        "println(\"targets\", yb, \"targets shape\", yb.shape)\n",
+        "for b in range(BATCH_SIZE): # batch dimension\n",
+        "    for t in range(BLOCK_SIZE): # time dimension\n",
+        "        context = xb[b, :t+1]\n",
+        "        target = yb[b,t]\n",
+        "        print(f\"when input is {context.tolist()} the target: {target}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3YTqHDylg6cY",
+        "outputId": "c4538aa1-008b-4b3d-8faf-f8f2d3efafa8"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "inputs\n",
+            "[[18 47 56 57 58  1 15 47]\n",
+            " [47 64 43 52 10  0 14 43]\n",
+            " [53 56 43  1 61 43  1 54]\n",
+            " [53 41 43 43 42  1 39 52]]\n",
+            "inputs shape\n",
+            "(4, 8)\n",
+            "targets\n",
+            "[[47 56 57 58  1 15 47 58]\n",
+            " [64 43 52 10  0 14 43 44]\n",
+            " [56 43  1 61 43  1 54 56]\n",
+            " [41 43 43 42  1 39 52 63]]\n",
+            "targets shape\n",
+            "(4, 8)\n",
+            "when input is [18] the target: 47\n",
+            "when input is [18, 47] the target: 56\n",
+            "when input is [18, 47, 56] the target: 57\n",
+            "when input is [18, 47, 56, 57] the target: 58\n",
+            "when input is [18, 47, 56, 57, 58] the target: 1\n",
+            "when input is [18, 47, 56, 57, 58, 1] the target: 15\n",
+            "when input is [18, 47, 56, 57, 58, 1, 15] the target: 47\n",
+            "when input is [18, 47, 56, 57, 58, 1, 15, 47] the target: 58\n",
+            "when input is [47] the target: 64\n",
+            "when input is [47, 64] the target: 43\n",
+            "when input is [47, 64, 43] the target: 52\n",
+            "when input is [47, 64, 43, 52] the target: 10\n",
+            "when input is [47, 64, 43, 52, 10] the target: 0\n",
+            "when input is [47, 64, 43, 52, 10, 0] the target: 14\n",
+            "when input is [47, 64, 43, 52, 10, 0, 14] the target: 43\n",
+            "when input is [47, 64, 43, 52, 10, 0, 14, 43] the target: 44\n",
+            "when input is [53] the target: 56\n",
+            "when input is [53, 56] the target: 43\n",
+            "when input is [53, 56, 43] the target: 1\n",
+            "when input is [53, 56, 43, 1] the target: 61\n",
+            "when input is [53, 56, 43, 1, 61] the target: 43\n",
+            "when input is [53, 56, 43, 1, 61, 43] the target: 1\n",
+            "when input is [53, 56, 43, 1, 61, 43, 1] the target: 54\n",
+            "when input is [53, 56, 43, 1, 61, 43, 1, 54] the target: 56\n",
+            "when input is [53] the target: 41\n",
+            "when input is [53, 41] the target: 43\n",
+            "when input is [53, 41, 43] the target: 43\n",
+            "when input is [53, 41, 43, 43] the target: 42\n",
+            "when input is [53, 41, 43, 43, 42] the target: 1\n",
+            "when input is [53, 41, 43, 43, 42, 1] the target: 39\n",
+            "when input is [53, 41, 43, 43, 42, 1, 39] the target: 52\n",
+            "when input is [53, 41, 43, 43, 42, 1, 39, 52] the target: 63\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BigramLangModel(nn.Module):\n",
+        "  \"\"\"Reads one char and predicits the next char.\"\"\"\n",
+        "  vocab_size: int\n",
+        "\n",
+        "  def setup(self):\n",
+        "    super().setup()\n",
+        "    self.token_embedding_table = nn.Embed(num_embeddings=self.vocab_size, features=self.vocab_size)\n",
+        "\n",
+        "  def __call__(self, inputs):\n",
+        "    # Run block size inputs through embedding lookup.\n",
+        "    # For each char, you get the logit predicted for that char.\n",
+        "    # Then, you use the target token for that input and do a cross_entropy_loss.\n",
+        "    logits = self.token_embedding_table(inputs)\n",
+        "    return logits"
+      ],
+      "metadata": {
+        "id": "2eyyiNsw_YL-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
