--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -25,35 +25,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "6427RRkAbysU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "54aad7f2-d9d0-409c-8854-3f12beee22d3"
+        "outputId": "c5493880-5017-4723-9565-3a254b9629a1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-01-28 03:42:26--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "--2024-02-01 05:33:34--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
             "Saving to: ‘input.txt’\n",
             "\n",
-            "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.04s   \n",
+            "input.txt           100%[===================>]   1.06M  6.43MB/s    in 0.2s    \n",
             "\n",
-            "2024-01-28 03:42:27 (29.7 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2024-02-01 05:33:35 (6.43 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m674.5/674.5 kB\u001b[0m \u001b[31m14.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m"
           ]
         }
@@ -90,7 +89,7 @@
       "metadata": {
         "id": "OZqEXlfmfuwo"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -165,9 +164,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jYycQ8ocg2sy",
-        "outputId": "f2b93863-226c-4924-ebbf-60f720428faf"
+        "outputId": "b140569d-6431-4c44-b25d-c824953afe5f"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3YTqHDylg6cY",
-        "outputId": "54e568a1-6773-4976-c384-d88b2048f308"
+        "outputId": "7e73d331-e6fc-4d4f-8e63-b55a69b05955"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,30 +282,30 @@
       "metadata": {
         "id": "2eyyiNsw_YL-"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# In flax, you need to init the model with sample input that you would pass during each forward pass.\n",
-        "sample_input_row = jrand.randint(key=jrand.PRNGKey(99), minval=0, maxval=65, dtype=jnp.int32, shape=[BLOCK_SIZE])\n",
+        "sample_input_row = jrand.randint(key=jrand.PRNGKey(99), minval=0, maxval=65, dtype=jnp.int32, shape=[1, BLOCK_SIZE])\n",
         "sample_input_row"
       ],
       "metadata": {
         "id": "cKYsKCciBBqc",
-        "outputId": "c89d38c4-e531-4d87-e290-ccf74e9fe79f",
+        "outputId": "ec497a6c-2372-465b-dc2d-2738a85e3de9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Array([21, 23, 50, 28, 53, 55, 40, 29], dtype=int32)"
+              "Array([[21, 23, 50, 28, 53, 55, 40, 29]], dtype=int32)"
             ]
           },
           "metadata": {},
@@ -317,30 +316,28 @@
     {
       "cell_type": "code",
       "source": [
-        "sample_input_batch = jrand.randint(key=jrand.PRNGKey(99), minval=0, maxval=65, dtype=jnp.int32, shape=[BATCH_SIZE, BLOCK_SIZE])\n",
-        "sample_input_batch"
+        "# Flax accepts flexibility in the batch dimension, so pass 1 for batch_dim and rest of the dim keep it to input shape.\n",
+        "sample_input_row = jnp.ones(shape=[1, BLOCK_SIZE], dtype=jnp.int32)\n",
+        "sample_input_row"
       ],
       "metadata": {
-        "id": "-26e9X59CWas",
-        "outputId": "403b32db-a1c8-4728-a376-c2df7cf46480",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FkxBwwipK6Yc",
+        "outputId": "0b79b771-ea2b-4828-a245-1d2af5972544"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Array([[52,  4, 61, 62, 37, 37, 33, 18],\n",
-              "       [64, 41, 20,  2, 41, 35, 29, 21],\n",
-              "       [40, 45, 52, 10, 12, 55, 49, 56],\n",
-              "       [ 3, 60, 15,  5, 14, 12,  1, 13]], dtype=int32)"
+              "Array([[1, 1, 1, 1, 1, 1, 1, 1]], dtype=int32)"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -348,17 +345,17 @@
       "cell_type": "code",
       "source": [
         "model = BigramLangModel(vocab_size=65)\n",
-        "params = model.init(jrand.PRNGKey(99), sample_input_batch)[\"params\"]\n",
+        "params = model.init(jrand.PRNGKey(99), sample_input_row)[\"params\"]\n",
         "model, params"
       ],
       "metadata": {
         "id": "dtb3A3KFCgF8",
-        "outputId": "95386345-299d-4c96-a258-bc74ef3f3a65",
+        "outputId": "b12258ae-d7f6-4c0a-c457-66e230acab1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -384,7 +381,37 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample_input_batch = jrand.randint(key=jrand.PRNGKey(99), minval=0, maxval=65, dtype=jnp.int32, shape=[BATCH_SIZE, BLOCK_SIZE])\n",
+        "sample_input_batch"
+      ],
+      "metadata": {
+        "id": "-26e9X59CWas",
+        "outputId": "22fc8d7d-94cd-4bee-bb5e-20ab6809faf8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([[52,  4, 61, 62, 37, 37, 33, 18],\n",
+              "       [64, 41, 20,  2, 41, 35, 29, 21],\n",
+              "       [40, 45, 52, 10, 12, 55, 49, 56],\n",
+              "       [ 3, 60, 15,  5, 14, 12,  1, 13]], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     },
@@ -396,12 +423,12 @@
       ],
       "metadata": {
         "id": "AOqPQ3R7Cqab",
-        "outputId": "65248fd9-3ff4-4b0f-e52c-78b9b6cf852c",
+        "outputId": "27f7a8b1-172a-4a26-8a30-560e9ba9f7dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,7 +495,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 13
         }
       ]
     },
@@ -490,12 +517,12 @@
       ],
       "metadata": {
         "id": "x9UFVRpPDeZI",
-        "outputId": "13434ccf-e592-46d2-de5c-9183807d7f2e",
+        "outputId": "b2a1b622-7a0f-478a-a4fc-acf00b1e0af8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,12 +548,12 @@
       ],
       "metadata": {
         "id": "s1yjp5qdEKMR",
-        "outputId": "f73c6931-7fca-4787-cf37-a3f04e8a34f9",
+        "outputId": "5aab0904-110d-4578-a940-ff355bcbb12e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,25 +570,25 @@
     {
       "cell_type": "code",
       "source": [
-        "logits = model.apply({\"params\": params}, inputs)\n",
+        "logits = model.apply({\"params\": params}, sample_input_batch)\n",
         "loss = optax.softmax_cross_entropy_with_integer_labels(logits, targets)\n",
         "loss = loss.mean()\n",
         "println(loss)"
       ],
       "metadata": {
         "id": "Za7g7vR_FQCQ",
-        "outputId": "c42ed96f-e206-4d97-e739-5502ed964ecf",
+        "outputId": "43c88364-0e2d-481e-9b07-c7b68fa01159",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4.1516514\n"
+            "4.1973557\n"
           ]
         }
       ]
@@ -583,7 +610,7 @@
       "metadata": {
         "id": "09vAczHeGDis"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -594,7 +621,7 @@
       "metadata": {
         "id": "lJnYF1OtGzPq"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -606,12 +633,12 @@
       ],
       "metadata": {
         "id": "o3XKCpCJHQip",
-        "outputId": "3a0103ae-ced5-420e-fc9c-1e0917638e3c",
+        "outputId": "271e2eb2-49c4-4f41-ddbd-f415bcc60f80",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,12 +672,12 @@
       ],
       "metadata": {
         "id": "qLHB0BpQHfI1",
-        "outputId": "22f18e9a-4db3-46e1-fad2-b88b42877a89",
+        "outputId": "3f8f8406-de58-4249-ad18-a62a00a4f097",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,19 +738,60 @@
       "metadata": {
         "id": "XTFr_QJgIjE8"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "grad_fn = jax.grad(compute_loss, argnums=(0))"
+        "grad_fn = jax.value_and_grad(compute_loss, argnums=(0))"
       ],
       "metadata": {
         "id": "oHtnU9jjJf52"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "params = model.init(jrand.PRNGKey(90), jnp.ones(shape=(1, BLOCK_SIZE), dtype=jnp.int32))[\"params\"]\n",
+        "opt = optax.adam(learning_rate=0.01)\n",
+        "state = train_state.TrainState.create(apply_fn=model.apply, params=params, tx=opt)\n",
+        "\n",
+        "for epoch in range(1000):\n",
+        "  batch = get_batch()\n",
+        "  loss, grads = grad_fn(state.params, state, batch)\n",
+        "  print(loss) if epoch%100==0 else None\n",
+        "  state = state.apply_gradients(grads=grads)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gtzCS8NzMJx9",
+        "outputId": "9e61adc5-1717-4fcd-bfa7-a0bc54296acb"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.195362\n",
+            "3.483488\n",
+            "3.2717464\n",
+            "2.9733536\n",
+            "2.8901167\n",
+            "2.7750075\n",
+            "2.516191\n",
+            "2.5249543\n",
+            "1.9824001\n",
+            "2.3364289\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
