added bow attention code to operate on a single row within batch, it can be vmapped

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -31,25 +31,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c5493880-5017-4723-9565-3a254b9629a1"
+        "outputId": "d05dd815-732f-4517-b9a8-44cd317d8f27"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-02-01 05:33:34--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2024-02-02 04:38:57--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
             "Saving to: ‘input.txt’\n",
             "\n",
-            "input.txt           100%[===================>]   1.06M  6.43MB/s    in 0.2s    \n",
+            "input.txt           100%[===================>]   1.06M  6.34MB/s    in 0.2s    \n",
             "\n",
-            "2024-02-01 05:33:35 (6.43 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2024-02-02 04:38:58 (6.34 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m10.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
@@ -164,7 +164,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jYycQ8ocg2sy",
-        "outputId": "b140569d-6431-4c44-b25d-c824953afe5f"
+        "outputId": "ff260fa5-3b19-430b-b505-2d09ee4ed05a"
       },
       "execution_count": 3,
       "outputs": [
@@ -203,7 +203,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3YTqHDylg6cY",
-        "outputId": "7e73d331-e6fc-4d4f-8e63-b55a69b05955"
+        "outputId": "beffd99a-e4c5-42c3-d119-43812c9e5a8c"
       },
       "execution_count": 4,
       "outputs": [
@@ -294,7 +294,7 @@
       ],
       "metadata": {
         "id": "cKYsKCciBBqc",
-        "outputId": "ec497a6c-2372-465b-dc2d-2738a85e3de9",
+        "outputId": "84359cbd-ddfd-45f6-90ce-89753b8f8196",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -325,9 +325,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FkxBwwipK6Yc",
-        "outputId": "0b79b771-ea2b-4828-a245-1d2af5972544"
+        "outputId": "ca35562c-19f7-4ad5-dd5e-8032fc54b456"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -350,12 +350,12 @@
       ],
       "metadata": {
         "id": "dtb3A3KFCgF8",
-        "outputId": "b12258ae-d7f6-4c0a-c457-66e230acab1e",
+        "outputId": "ff40aa8d-7d92-4592-f967-bc1f4eafd22a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -381,7 +381,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -393,12 +393,12 @@
       ],
       "metadata": {
         "id": "-26e9X59CWas",
-        "outputId": "22fc8d7d-94cd-4bee-bb5e-20ab6809faf8",
+        "outputId": "aa9a6a14-2d9f-40d9-cb63-371dd06b7496",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +411,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 9
         }
       ]
     },
@@ -423,12 +423,12 @@
       ],
       "metadata": {
         "id": "AOqPQ3R7Cqab",
-        "outputId": "27f7a8b1-172a-4a26-8a30-560e9ba9f7dc",
+        "outputId": "2d951735-65bc-4185-8f02-dfac2f058698",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +495,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 10
         }
       ]
     },
@@ -517,12 +517,12 @@
       ],
       "metadata": {
         "id": "x9UFVRpPDeZI",
-        "outputId": "b2a1b622-7a0f-478a-a4fc-acf00b1e0af8",
+        "outputId": "b1a85df1-3706-4ce3-a00e-5b5a86a61fae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,12 +548,12 @@
       ],
       "metadata": {
         "id": "s1yjp5qdEKMR",
-        "outputId": "5aab0904-110d-4578-a940-ff355bcbb12e",
+        "outputId": "372478e8-cfdc-470b-dd20-c9c2907ea049",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,22 +573,23 @@
         "logits = model.apply({\"params\": params}, sample_input_batch)\n",
         "loss = optax.softmax_cross_entropy_with_integer_labels(logits, targets)\n",
         "loss = loss.mean()\n",
-        "println(loss)"
+        "println(loss, logits.shape)"
       ],
       "metadata": {
         "id": "Za7g7vR_FQCQ",
-        "outputId": "43c88364-0e2d-481e-9b07-c7b68fa01159",
+        "outputId": "2828fb11-dad5-4886-8c76-94e78eade8a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4.1973557\n"
+            "4.197356\n",
+            "(4, 8, 65)\n"
           ]
         }
       ]
@@ -610,7 +611,7 @@
       "metadata": {
         "id": "09vAczHeGDis"
       },
-      "execution_count": 21,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -621,7 +622,7 @@
       "metadata": {
         "id": "lJnYF1OtGzPq"
       },
-      "execution_count": 22,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -633,12 +634,12 @@
       ],
       "metadata": {
         "id": "o3XKCpCJHQip",
-        "outputId": "271e2eb2-49c4-4f41-ddbd-f415bcc60f80",
+        "outputId": "419185af-5213-403c-db28-17446125d308",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,12 +673,12 @@
       ],
       "metadata": {
         "id": "qLHB0BpQHfI1",
-        "outputId": "3f8f8406-de58-4249-ad18-a62a00a4f097",
+        "outputId": "e768b5ca-717c-45bd-8a27-2fc4c2f208b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,7 +739,7 @@
       "metadata": {
         "id": "XTFr_QJgIjE8"
       },
-      "execution_count": 25,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -749,7 +750,7 @@
       "metadata": {
         "id": "oHtnU9jjJf52"
       },
-      "execution_count": 32,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -773,7 +774,7 @@
         "id": "gtzCS8NzMJx9",
         "outputId": "9e61adc5-1717-4fcd-bfa7-a0bc54296acb"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -790,6 +791,109 @@
             "1.9824001\n",
             "2.3364289\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mathematical trick in attention"
+      ],
+      "metadata": {
+        "id": "G78p73EKNOJp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## doing bag of words\n",
+        "basically, in B, T, C\n",
+        "at t-th token in a row of batch, just sum all the values upto t."
+      ],
+      "metadata": {
+        "id": "vWZlcN7aNQ6f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Generate T, C and write code which works for T, C.\n",
+        "# Then, vmap it for batch\n",
+        "T, C = BLOCK_SIZE, 65\n",
+        "\n",
+        "key, split_key = jrand.split(jrand.PRNGKey(99))\n",
+        "\n",
+        "x = jrand.normal(split_key, (T, C))\n",
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4x3NkSoBNsTg",
+        "outputId": "80f84b5a-fd8a-4442-b4ea-2c6d429b1847"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8, 65)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def bow_attention(x: jnp.array):\n",
+        "  \"\"\"Operates on a single row within batch, it calculates\n",
+        "    bow attention by summing all token channels prev + current token channe\n",
+        "\n",
+        "  \"\"\"\n",
+        "  T = BLOCK_SIZE # T == 8\n",
+        "  xbow = jnp.zeros(shape=(T, C))\n",
+        "  for token in range(T):\n",
+        "    xprev = x[:token]\n",
+        "    xcurrent = x[token:token+1]\n",
+        "\n",
+        "    current_bow = jnp.mean(jnp.concatenate([xprev, xcurrent], axis=0), axis=0)\n",
+        "    xbow = xbow.at[token].set(current_bow)\n",
+        "  return xbow"
+      ],
+      "metadata": {
+        "id": "jtZjg_WyS3pD"
+      },
+      "execution_count": 102,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "jax.make_jaxpr(bow_attention)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xymL9pqOUd4I",
+        "outputId": "8e88acba-0598-44de-e820-18eb9c6b3d41"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function jax.make_jaxpr(bow_attention)(x: <function array at 0x7bdf6128c1f0>)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
         }
       ]
     },
