added a small test for bow attention

--- a/nanoGPT_JAX_JAX_JAX.ipynb
+++ b/nanoGPT_JAX_JAX_JAX.ipynb
@@ -25,31 +25,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "6427RRkAbysU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d05dd815-732f-4517-b9a8-44cd317d8f27"
+        "outputId": "5d33c7f7-5dbb-4835-aaaf-f20fcdfc013e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-02-02 04:38:57--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2024-02-02 18:15:09--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
             "Saving to: ‘input.txt’\n",
             "\n",
-            "input.txt           100%[===================>]   1.06M  6.34MB/s    in 0.2s    \n",
+            "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2024-02-02 04:38:58 (6.34 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2024-02-02 18:15:09 (33.6 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m10.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m15.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "OZqEXlfmfuwo"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -164,9 +164,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jYycQ8ocg2sy",
-        "outputId": "ff260fa5-3b19-430b-b505-2d09ee4ed05a"
+        "outputId": "b987d3a3-9d0c-470c-87df-3b197ae88888"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +180,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-3-560c18dc3230>:24: UserWarning: Explicitly requested dtype <class 'jax.numpy.int64'> requested in array is not available, and will be truncated to dtype int32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/google/jax#current-gotchas for more.\n",
+            "<ipython-input-4-560c18dc3230>:24: UserWarning: Explicitly requested dtype <class 'jax.numpy.int64'> requested in array is not available, and will be truncated to dtype int32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/google/jax#current-gotchas for more.\n",
             "  data = jnp.array(encode(text, stoi), dtype=jnp.int64)\n"
           ]
         }
@@ -203,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3YTqHDylg6cY",
-        "outputId": "beffd99a-e4c5-42c3-d119-43812c9e5a8c"
+        "outputId": "8a1cb94b-4897-4651-f21a-1190c81bbdd0"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +282,7 @@
       "metadata": {
         "id": "2eyyiNsw_YL-"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -294,12 +294,12 @@
       ],
       "metadata": {
         "id": "cKYsKCciBBqc",
-        "outputId": "84359cbd-ddfd-45f6-90ce-89753b8f8196",
+        "outputId": "131df8ae-be8f-4bf4-fa55-32ecbe7ac3b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,7 +309,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -325,9 +325,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FkxBwwipK6Yc",
-        "outputId": "ca35562c-19f7-4ad5-dd5e-8032fc54b456"
+        "outputId": "65aaa9d0-0531-464c-a791-59d67be10930"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -350,12 +350,12 @@
       ],
       "metadata": {
         "id": "dtb3A3KFCgF8",
-        "outputId": "ff40aa8d-7d92-4592-f967-bc1f4eafd22a",
+        "outputId": "1ea858e9-5883-4887-df9f-e3ec9e798a1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -381,7 +381,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -393,12 +393,12 @@
       ],
       "metadata": {
         "id": "-26e9X59CWas",
-        "outputId": "aa9a6a14-2d9f-40d9-cb63-371dd06b7496",
+        "outputId": "41e13507-43c0-4982-efde-7b1a62d4b5fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +411,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -423,12 +423,12 @@
       ],
       "metadata": {
         "id": "AOqPQ3R7Cqab",
-        "outputId": "2d951735-65bc-4185-8f02-dfac2f058698",
+        "outputId": "0b269b7f-77bc-4a6d-d20d-ac630e43a671",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +495,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -517,12 +517,12 @@
       ],
       "metadata": {
         "id": "x9UFVRpPDeZI",
-        "outputId": "b1a85df1-3706-4ce3-a00e-5b5a86a61fae",
+        "outputId": "5b0cceed-9e93-443e-bb78-965ef0e64c9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,12 +548,12 @@
       ],
       "metadata": {
         "id": "s1yjp5qdEKMR",
-        "outputId": "372478e8-cfdc-470b-dd20-c9c2907ea049",
+        "outputId": "d26203f0-8ed3-4e83-d8c7-dbb1696e4dc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,18 +577,18 @@
       ],
       "metadata": {
         "id": "Za7g7vR_FQCQ",
-        "outputId": "2828fb11-dad5-4886-8c76-94e78eade8a7",
+        "outputId": "82db1f5f-6a35-4214-e3fc-f49eede37a00",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4.197356\n",
+            "4.1973557\n",
             "(4, 8, 65)\n"
           ]
         }
@@ -611,7 +611,7 @@
       "metadata": {
         "id": "09vAczHeGDis"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -622,7 +622,7 @@
       "metadata": {
         "id": "lJnYF1OtGzPq"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -634,12 +634,12 @@
       ],
       "metadata": {
         "id": "o3XKCpCJHQip",
-        "outputId": "419185af-5213-403c-db28-17446125d308",
+        "outputId": "fbc4811c-6ce3-4195-f117-3cef55d3c88f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,12 +673,12 @@
       ],
       "metadata": {
         "id": "qLHB0BpQHfI1",
-        "outputId": "e768b5ca-717c-45bd-8a27-2fc4c2f208b8",
+        "outputId": "4b769bca-659a-44ff-a12d-329d4962605f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,7 +739,7 @@
       "metadata": {
         "id": "XTFr_QJgIjE8"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -750,7 +750,7 @@
       "metadata": {
         "id": "oHtnU9jjJf52"
       },
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -760,7 +760,7 @@
         "opt = optax.adam(learning_rate=0.01)\n",
         "state = train_state.TrainState.create(apply_fn=model.apply, params=params, tx=opt)\n",
         "\n",
-        "for epoch in range(1000):\n",
+        "for epoch in range(500):\n",
         "  batch = get_batch()\n",
         "  loss, grads = grad_fn(state.params, state, batch)\n",
         "  print(loss) if epoch%100==0 else None\n",
@@ -772,24 +772,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gtzCS8NzMJx9",
-        "outputId": "9e61adc5-1717-4fcd-bfa7-a0bc54296acb"
+        "outputId": "449c406a-da6b-4147-d58d-3734cfe4ebc2"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4.195362\n",
-            "3.483488\n",
-            "3.2717464\n",
-            "2.9733536\n",
-            "2.8901167\n",
-            "2.7750075\n",
-            "2.516191\n",
-            "2.5249543\n",
-            "1.9824001\n",
-            "2.3364289\n"
+            "4.190708\n",
+            "3.5392034\n",
+            "3.4802597\n",
+            "2.8487594\n",
+            "2.805549\n"
           ]
         }
       ]
@@ -831,9 +826,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4x3NkSoBNsTg",
-        "outputId": "80f84b5a-fd8a-4442-b4ea-2c6d429b1847"
+        "outputId": "c3523c92-047e-4588-f60f-e5359c19f2c3"
       },
-      "execution_count": 94,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -843,7 +838,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 22
         }
       ]
     },
@@ -868,7 +863,21 @@
       "metadata": {
         "id": "jtZjg_WyS3pD"
       },
-      "execution_count": 102,
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test bow_attention using non-random tensor.\n",
+        "numbers = jnp.arange(1, 9).reshape(-1, 1)\n",
+        "test_arr = jnp.tile(numbers, (1, 65))\n",
+        "bow_attention(test_arr)"
+      ],
+      "metadata": {
+        "id": "aDTyU_cJCQaW"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
